--- a/index.html
+++ b/index.html
@@ -7,14 +7,27 @@
 
     <!-- Bootstrap CSS -->
     <link rel='stylesheet' href='css/bootstrap.min.css' type="text/css" />
+    <link rel='stylesheet' href='css/style.css' type="text/css" />
 
 
-    <title>Hello, world!</title>
+    <title>Bootstrap Landing Page</title>
   </head>
   <body>
+    <header>header here</header>
+
     <main>
-       
+       <!-- Banner Section -->
+       <section>banner</section>
+       <!-- Process Section -->
+       <section>process</section>
+       <!-- Feature Section -->
+       <section>feature</section>
+       <!-- Popular Section -->
+       <section>popular</section>
+       <!-- Request Section -->
+       <section>section</section>
     </main>
+    <footer>footer</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
