--- a/index.html
+++ b/index.html
@@ -5,17 +5,55 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel='stylesheet' href='css/bootstrap.min.css' type="text/css" />
-    <link rel='stylesheet' href='css/style.css' type="text/css" />
-
-
+    <link rel='stylesheet' href='css/style.css' type="text/css" /> 
+   
     <title>Bootstrap Landing Page</title>
   </head>
   <body>
-    <header>header here</header>
+    <header class="fixed-top page-header">
+      <div class="container-fluid container-fluid-max">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
+          <a class="navbar-brand" href="#home">...</a>
+          <button class="navbar-toggler" type="button" data-toggler="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-lg-between" id="navbarNav">
+            <ul class="navbar-nav">
+              <li>
+                <a href="" class="nav-link">...</a>
+              </li>
+              <!-- more list items here -->
+            </ul>
+            <div class="text-white">
+              <a href="" class="mr-2">
+                <i class="fas fa-phone"></i>
+                <div class="d-none d-xl-inline">...</div>
+              </a>
+              <a href="">
+                <i class="fas fa-envelope"></i>
+                <div class="d-none d-xl-inline">...</div>
+              </a>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </header>
 
     <main>
+      <section id="home" class="d-flex align-items-center position-relative vh-100 cover hero" style="background-image: url('images/cappadocia.jpg');">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+              <h1 class="text-white">...</h1>
+              <div class="mt-3">
+                <a class="btn bg-red text-white mr-2" href="" role="button">...</a>
+                <a class="btn bg-red text-white mr-2" href="" role="button">...</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
        <!-- Banner Section -->
        <section>banner</section>
        <!-- Process Section -->
@@ -33,6 +71,7 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src='js/jquery.min.js'></script>
     <script src='js/bootstrap.min.js'></script>
+
     
 </body>
 </html>
