--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel='stylesheet' href='css/bootstrap.min.css' type="text/css" />
+    <link rel='stylesheet' href='css/fontawesome.min.css' />
     <link rel='stylesheet' href='css/style.css' type="text/css" /> 
    
     <title>Bootstrap Landing Page</title>
@@ -54,10 +55,31 @@
           </div>
         </div>
       </section>
-       <!-- Banner Section -->
-       <section>banner</section>
-       <!-- Process Section -->
-       <section>process</section>
+
+      <section id="process" class="process">
+        <div class="container-fluid container-fluid-max">
+          <div class="row text-center py-5">
+            <div class="col-12 pb-4">
+              <h2 class="text-red">...</h2>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3">
+              <span class="fa-stack">
+                <i class="fas fa-circle fa-stack-2x text-red"></i>
+                <i class="fas fa-map-marked fa-stack-1x text-white"></i>
+              </span>
+              <h3 class="mt-3 text-red h4">...</h3>
+              <p>...</p>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3">...</div>
+            <div class="col-12 col-sm-6 col-lg-3">...</div>
+            <div class="col-12 col-sm-6 col-lg-3">...</div>
+            <div class="col-12 pt-3">
+              <a href="" class="btn bg-red text-white" role="button" target="_blank">...</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
        <!-- Feature Section -->
        <section>feature</section>
        <!-- Popular Section -->
