Add split blocks section

--- a/index.html
+++ b/index.html
@@ -79,9 +79,22 @@
           </div>
         </div>
       </section>
-
-       <!-- Feature Section -->
-       <section>feature</section>
+      <section id="featured-destinations" class="featured-destinations bg-lightblue">
+        <div class="row">
+          <div class="col-12 col-md-6 d-flex align-items-center order-1 order-md-0">
+            <div class="p-15">...</div>
+          </div>
+          <div class="col-12 col-md-6 order-0 order-md-1">
+            <div class="vh-100 cover" style="background-image: url('images/cappadocia.jpg');">...</div>
+          </div>
+          <div class="col-12 col-md-6 order-2">
+            <div class="vh-100 cover" style="background-image: url('images/cappadocia.jpg');">...</div>
+          </div>
+          <div class="col-12 col-md-6 d-flex align-items-center order-3">
+            <div class="p-15">...</div>
+          </div>
+        </div>
+      </section>
        <!-- Popular Section -->
        <section>popular</section>
        <!-- Request Section -->
