Add popular section

--- a/index.html
+++ b/index.html
@@ -95,10 +95,26 @@
           </div>
         </div>
       </section>
-       <!-- Popular Section -->
-       <section>popular</section>
-       <!-- Request Section -->
-       <section>section</section>
+     
+      <section id="popular-destinations" class="popular-destinations py-5">
+        <div class="container-fluid container-fluid-max">
+          <div class="row">
+            <div class="col-12">
+              <h2 class="pb-3 text-red">...</h2>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4">...</div>
+            <div class="col-12 col-sm-6 col-md-4">...</div>
+            <div class="col-12 col-sm-6 col-md-4">...</div>
+            <div class="col-12 col-sm-6">...</div>
+            <div class="col-12 col-sm-6">...</div>
+          </div>
+          <div class="row">
+            <div class="col text-center">
+              <a href="" class="btn bg-red text-white" role="button">...</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>footer</footer>
 
