--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
           </div>
         </div>
       </section>
+      <section id="request-quote" class="py-5 request-quote bg-lightblue">
+        <div class="container-fluid container-fluid-max">
+          <div class="row justify-content-center">
+            <div class="col-12 col-md-auto py-3 text-center">
+              <h2 class="mb-0 text-red">...</h2>
+              <p class="mb-0 h4 text-red font-weight-normal">...</p>
+            </div>
+            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center">
+              <a href="" class="btn bg-red text-white font-weight-bold" role="button">
+                ...
+                <i class="ml-1 fas fa-hand-point-right"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>footer</footer>
 
