Add Footer section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,20 @@
         </div>
       </section>
     </main>
-    <footer>footer</footer>
+    <footer class="py-5 page-footer">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-md-6 footer-child copyright">...</div>
+          <div class="col-12 col-md-6 footer-child footer-links">
+            <a href="" class="mr-3">...</a>
+            <a href="">...</a>
+            <div>
+              <small>...</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
